# Assembler_Interpreter

./: .gitignore  CMakeLists.txt  README.md  assembler.cpp  assembler.hpp  interpreter.cpp  interpreter.hpp  main.cpp  resultfile.yaml  textfile.txt  vmprocessor.cpp  vmprocessor.hpp
data/inputs/: textfileEASY.txt
include/: assembler.hpp  interpreter.hpp
src/: assembler.cpp  interpreter.cpp  main.cpp  vmprocessor.cpp  vmprocessor.hpp
tests/: logfile.yaml  main.cpp
